Build AI-powered GST compliance platform with HSN vector search, GSTR-2B reconciliation, notifications and production enhancements